--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,16 @@ body {
   background-color: #ffffff;
 }
 
-#logo {
+#pagecontent {
   width: 800px;
   margin: 10px auto 10px auto;
 }
 
+#logo {
+  font-size: 28px;
+}
+
 #navbar {
-  width: 800px;
-  margin: 10px auto 10px auto;
   border-top: 2px solid;
   border-bottom: 2px solid;
   padding: 20px;
@@ -39,4 +41,8 @@ p {
 img {
   width: 800px;
   height: 600px;
+}
+
+.photocaption {
+  
 }
