--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,9 @@ body {
 }
 
 img {
-  width: 800px;
-  height: 600px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 p {
@@ -58,5 +59,6 @@ p {
 }
 
 .photocaption {
-
+  padding-bottom: 10px;
+  border-bottom: 1px solid;
 }
