--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ nav li {
 
 header {
   height: 240px;
-  background-color: white;
+  background-image: url("../images/Header Background.jpg");
 }
 
 img {
@@ -38,6 +38,15 @@ p {
 
 #page {
   margin-top: 54px;
+}
+
+#logo {
+  color: white;
+  font-size: 24px;
+  text-shadow: 2px 2px 7px #111111;
+  float: right;
+  margin-right: 15px;
+  margin-top: 140px;
 }
 
 #page-header {
@@ -76,13 +85,11 @@ p {
 
 /*Homepage Styles */
 #siteintro {
-  background-color: #efefef;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 #blog {
-  background-color: #efefef;
   margin-top: 10px;
   margin-bottom: 10px;
 }
