--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,11 @@ p {
   margin-bottom: 10px;
 }
 
+#recentPhotos {
+  width: 400px;
+  height: 300px;
+}
+
 /*Gallery Styles*/
 #galleries {
   overflow: auto;
