--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ p {
   margin-top: 57px;
 }
 
-#page-header {
+#pageHeader {
   color: white;
   font-size: 24px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
@@ -80,12 +80,7 @@ p {
 }
 
 /*Homepage Styles */
-#siteintro {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-#blog {
+#siteIntro {
   margin-top: 10px;
   margin-bottom: 10px;
 }
