--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,19 @@ p {
 
 #pageHeader {
   color: white;
-  font-size: 24px;
+  font-size: 42px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
   text-shadow: 2px 2px 7px #111111;
 }
 
-.section-header {
+.sectionHeader {
+  color: white;
+  font-size: 32px;
+  font-family: 'kaushan_scriptregular', Arial, sans-serif;
+  text-shadow: 2px 2px 7px #111111;
+}
+
+.subHeader {
   color: white;
   font-size: 24px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
@@ -60,6 +67,7 @@ p {
 
 .navbtn {
   text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
   font-size: 18px;
   color: white;
   text-shadow: 2px 2px 7px #111111;
@@ -72,22 +80,29 @@ p {
 
 .navbtncur {
   text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
   font-size: 18px;
   color: #F1D5B9;
   text-shadow: 2px 2px 7px #111111;
   border-bottom: 3px solid #F1D5B9;
-  padding: 13px 40px;
+  padding: 14px 40px;
 }
 
 /*Homepage Styles */
-#siteIntro {
-  margin-top: 10px;
-  margin-bottom: 10px;
+#siteSummary {
+  padding: 30px 5px;
+  text-align: center;
 }
 
 #recentPhotos {
   width: 400px;
-  height: 300px;
+  height: auto;
+  border: 3px solid #F1D5B9;
+}
+
+.siteIntro {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /*Gallery Styles*/
@@ -111,7 +126,6 @@ p {
 
 /*About Styles*/
 #aboutme {
-  background-color: #efefef;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -119,8 +133,4 @@ p {
 /*Contact Styles*/
 #contact-intro {
   clear: left;
-}
-
-#contact-telephone {
-  float: right;
 }
