organised gallery layout and implemented lightbox for viewing gallery photos

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,6 @@ header {
   border-bottom: 3px solid #F1D5B9;
 }
 
-img {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
 p {
   color: white;
   font-size: 16px;
@@ -129,9 +123,19 @@ p {
   margin-bottom: 10px;
 }
 
-.photocaption {
-  padding-bottom: 10px;
-  border-bottom: 1px solid;
+.galleryThumb {
+  height: 165px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.imageThumb {
+  display: block;
+  max-height: 75%;
+  margin: 0px auto;
+  border: 2px solid #F1D5B9;
+  box-shadow: 2px 2px 2px #111111;
 }
 
 /*About Styles*/
