--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -28,7 +28,7 @@ header {
   border-bottom: 3px solid #F1D5B9;
 }
 
-p {
+p, label {
   color: white;
   font-size: 16px;
   font-family: Arial, Verdana, sans-serif;
