--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -29,9 +29,17 @@ header {
 }
 
 p {
-  color: white;
+  color: #ffffff;
   font-size: 16px;
   font-family: Arial, Verdana, sans-serif;
+}
+
+a {
+  color: #F1D5B9;
+}
+
+a:hover {
+  color: #ffffff;
 }
 
 #page {
@@ -39,7 +47,7 @@ p {
 }
 
 #pageHeader {
-  color: white;
+  color: #ffffff;
   font-size: 42px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
   text-shadow: 2px 2px 7px #111111;
@@ -56,14 +64,14 @@ p {
 }
 
 .sectionHeader {
-  color: white;
+  color: #ffffff;
   font-size: 32px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
   text-shadow: 2px 2px 7px #111111;
 }
 
 .subHeader {
-  color: white;
+  color: #ffffff;
   font-size: 24px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
   text-shadow: 2px 2px 7px #111111;
@@ -73,7 +81,7 @@ p {
   text-decoration: none;
   font-family: Arial, Verdana, sans-serif;
   font-size: 18px;
-  color: white;
+  color: #ffffff;
   text-shadow: 2px 2px 7px #111111;
   padding: 0px 40px;
 }
@@ -102,11 +110,6 @@ p {
   width: 400px;
   height: auto;
   border: 3px solid #F1D5B9;
-}
-
-.siteIntro {
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 /*Gallery Styles*/
@@ -139,10 +142,6 @@ p {
 }
 
 /*About Styles*/
-#aboutme {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 
 /*Contact Styles*/
 #contact-intro {
@@ -174,7 +173,7 @@ p {
   float: left;
   width: 20%;
   padding: 5px 10px 5px 5px;
-  color: white;
+  color: #ffffff;
   font-size: 16px;
   font-family: Arial, Verdana, sans-serif;
   text-align: right;
@@ -191,10 +190,11 @@ p {
   background-color: #F1D5B9;
   border: 2px solid #F1D5B9;
   box-shadow: 1px 1px 1px #111111;
-  font-size: 16px;
-  font-family: Arial, Verdana, sans-serif;
+  color: #ffffff;
+  font-size: 18px;
   font-weight: bold;
-  text-shadow: 0px 1px 1px #ffffff;
+  font-family: 'kaushan_scriptregular', Arial, sans-serif;
+  text-shadow: 0px 1px 1px #111111;
 }
 
 .formButton:hover {
