--- a/app/css/main.css
+++ b/app/css/main.css
@@ -473,24 +473,8 @@ body:after {
 
 /*General Styles*/
 body {
-  background-image: url("../images/backgrounds/Page Background.jpg"); }
-
-nav {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  background-color: #2E1915;
-  border-bottom: 3px solid #F1D5B9;
-  text-align: center; }
-
-nav li {
-  display: inline; }
-
-header {
-  height: 240px;
-  background-image: url("../images/backgrounds/Header Background.jpg");
-  border-bottom: 3px solid #F1D5B9; }
+  background-image: url("../images/backgrounds/page_background.jpg");
+  margin: 0px; }
 
 p {
   color: #ffffff;
@@ -501,7 +485,47 @@ a {
   color: #F1D5B9; }
 
 a:hover {
-  color: #ffffff; }
+  cursor: pointer; }
+
+header {
+  width: 100%;
+  height: 600px;
+  background-image: url("../images/backgrounds/call_to_action.jpg");
+  background-size: cover;
+  border-bottom: 3px solid #F1D5B9; }
+
+nav {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  max-width: 50%;
+  height: auto; }
+
+nav li {
+  display: inline; }
+
+#websiteLogo {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  max-width: 35%;
+  height: auto; }
+
+#websiteLogo img {
+  width: 100%; }
+
+#callToAction {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+#callToAction p {
+  color: #ffffff;
+  font-size: 200%;
+  font-family: 'kaushan_scriptregular', Arial, sans-serif;
+  text-shadow: 2px 2px 7px #111111;
+  text-align: center; }
 
 #page {
   margin-top: 57px; }
@@ -536,22 +560,20 @@ a:hover {
 .navbtn {
   text-decoration: none;
   font-family: Arial, Verdana, sans-serif;
-  font-size: 18px;
+  font-size: 150%;
+  font-weight: bold;
   color: #ffffff;
   text-shadow: 2px 2px 7px #111111;
-  padding: 0px 40px; }
-
-.navbtn:hover, .navbtncur:hover {
-  font-weight: bold; }
+  padding: 0px 25px; }
 
 .navbtncur {
   text-decoration: none;
   font-family: Arial, Verdana, sans-serif;
-  font-size: 18px;
+  font-size: 150%;
+  font-weight: bold;
   color: #F1D5B9;
   text-shadow: 2px 2px 7px #111111;
-  border-bottom: 3px solid #F1D5B9;
-  padding: 14px 40px; }
+  padding: 0px 25px; }
 
 /*Homepage Styles */
 #siteSummary {
