--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,24 +1,13 @@
-/* Import the 960 grid system to help define layout */
-@import '960_12_col';
-/* Import fonts used for website */
-@import 'fonts';
-/* Import lightbox styling for gallery */
-@import 'lightbox';
+@import 'base/fonts';
+@import 'base/typography';
+@import 'helpers/variables';
+@import 'vendor/960_12_col';
+@import 'vendor/lightbox';
 
 /*General Styles*/
 body {
   background-image: url("../images/backgrounds/page_background.jpg");
   margin: 0px;
-}
-
-p {
-  color: #ffffff;
-  font-size: 16px;
-  font-family: Arial, Verdana, sans-serif;
-}
-
-a {
-  color: #F1D5B9;
 }
 
 a:hover {
@@ -76,13 +65,6 @@ nav li {
   margin-top: 57px;
 }
 
-#pageHeader {
-  color: #ffffff;
-  font-size: 42px;
-  font-family: 'kaushan_scriptregular', Arial, sans-serif;
-  text-shadow: 2px 2px 7px #111111;
-}
-
 #twitterLogo {
   height: 48px;
   width: 48px;
@@ -91,20 +73,6 @@ nav li {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   box-shadow: 2px 2px 2px #111111;
-}
-
-.sectionHeader {
-  color: #ffffff;
-  font-size: 32px;
-  font-family: 'kaushan_scriptregular', Arial, sans-serif;
-  text-shadow: 2px 2px 7px #111111;
-}
-
-.subHeader {
-  color: #ffffff;
-  font-size: 24px;
-  font-family: 'kaushan_scriptregular', Arial, sans-serif;
-  text-shadow: 2px 2px 7px #111111;
 }
 
 .navbtn {
