added sass file for buttons and tweaks to variables

--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -1,4 +1,4 @@
-$base-text-colour: #fff;
-$link-text-colour: #F1D5B9;
-$body-font-family: Arial, Verdana, sans-serif;
-$header-font-family: 'kaushan_scriptregular', Arial, sans-serif;
+$white: #fff;
+$cream: #F1D5B9;
+$base-font-family: Arial, Verdana, sans-serif;
+$accent-font-family: 'kaushan_scriptregular', Arial, sans-serif;
