--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -1,30 +1,30 @@
 p {
-  color: $base-text-colour;
+  color: $white;
   font-size: 16px;
-  font-family: $body-font-family;
+  font-family: $base-font-family;
 }
 
 a {
-  color: $link-text-colour;
+  color: $cream;
 }
 
 #pageHeader {
-  color: $base-text-colour;
+  color: $white;
   font-size: 42px;
-  font-family: $header-font-family;
+  font-family: $accent-font-family;
   text-shadow: 2px 2px 7px #111111;
 }
 
 .sectionHeader {
-  color: $base-text-colour;
+  color: $white;
   font-size: 32px;
-  font-family: $header-font-family;
+  font-family: $accent-font-family;
   text-shadow: 2px 2px 7px #111111;
 }
 
 .subHeader {
-  color: $base-text-colour;
+  color: $white;
   font-size: 24px;
-  font-family: $header-font-family;
+  font-family: $accent-font-family;
   text-shadow: 2px 2px 7px #111111;
 }
