--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,8 +1,9 @@
-@import 'base/fonts';
 @import 'base/typography';
+@import 'components/buttons';
 @import 'helpers/variables';
 @import 'vendor/960_12_col';
 @import 'vendor/lightbox';
+@import 'vendor/fonts';
 
 /*General Styles*/
 body {
@@ -63,16 +64,6 @@ nav li {
 
 #page {
   margin-top: 57px;
-}
-
-#twitterLogo {
-  height: 48px;
-  width: 48px;
-  background-color: #55acee;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  box-shadow: 2px 2px 2px #111111;
 }
 
 .navbtn {
@@ -206,19 +197,4 @@ nav li {
   padding: 3px;
   font-size: 16px;
   font-family: Arial, Verdana, sans-serif;
-}
-
-.formButton {
-  background-color: #F1D5B9;
-  border: 2px solid #F1D5B9;
-  box-shadow: 1px 1px 1px #111111;
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: bold;
-  font-family: 'kaushan_scriptregular', Arial, sans-serif;
-  text-shadow: 0px 1px 1px #111111;
-}
-
-.formButton:hover {
-  cursor: pointer;
 }
