--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'base/typography';
 @import 'components/buttons';
 @import 'components/navigation';
+@import 'components/forms';
 @import 'helpers/variables';
 @import 'vendor/960_12_col';
 @import 'vendor/lightbox';
@@ -137,17 +138,6 @@ nav li {
   margin-left: 80px;
 }
 
-#formMessage {
-  width: 85%;
-  padding: 10px;
-  border: 3px solid #F1D5B9;
-  margin-bottom: 40px;
-  font-size: 16px;
-  font-family: Arial, Verdana, sans-serif;
-  text-align: center;
-  color: #F1D5B9;
-}
-
 #contactForm {
   overflow: auto;
   margin: 30px 0px;
@@ -161,21 +151,4 @@ nav li {
 .formSubmit {
   float: right;
   padding-right: 40px;
-}
-
-.formLabel {
-  float: left;
-  width: 20%;
-  padding: 5px 10px 5px 5px;
-  color: #ffffff;
-  font-size: 16px;
-  font-family: Arial, Verdana, sans-serif;
-  text-align: right;
-}
-
-.formInput {
-  border: 2px solid #F1D5B9;
-  padding: 3px;
-  font-size: 16px;
-  font-family: Arial, Verdana, sans-serif;
 }
