added variable for cream borders

--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -10,7 +10,7 @@
 
 .formButton {
   background-color: $cream;
-  border: 2px solid $cream;
+  border: $thin-cream-border;
   box-shadow: 1px 1px 1px #111111;
   color: $white;
   font-size: 18px;
