--- a/app/scss/components/_images.scss
+++ b/app/scss/components/_images.scss
@@ -13,11 +13,11 @@
 #recentPhotos {
   width: 400px;
   height: auto;
-  border: 3px solid $cream;
+  border: $medium-cream-border;
 }
 
 #mePhoto {
-  border: 3px solid $cream;
+  border: $medium-cream-border;
   margin-top: 70px;
   margin-left: 20px;
 }
