--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -1,4 +1,8 @@
 $white: #fff;
 $cream: #F1D5B9;
+
 $base-font-family: Arial, Verdana, sans-serif;
 $accent-font-family: 'kaushan_scriptregular', Arial, sans-serif;
+
+$thin-cream-border: 2px solid $cream;
+$medium-cream-border: 3px solid $cream;
