--- a/app/scss/pages/_galleries.scss
+++ b/app/scss/pages/_galleries.scss
@@ -22,6 +22,6 @@
   display: block;
   max-height: 75%;
   margin: 0px auto;
-  border: 2px solid $cream;
+  border: $thin-cream-border;
   box-shadow: 2px 2px 2px #111111;
 }
