--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -1,8 +1,13 @@
-$white: #fff;
-$cream: #F1D5B9;
+$medium-font: 1.6rem;
+$large-font: 2.4rem;
+$xlarge-font: 3.2rem;
+$xxlarge-font: 4.2rem;
 
 $base-font-family: Arial, Verdana, sans-serif;
 $accent-font-family: 'kaushan_scriptregular', Arial, sans-serif;
+
+$white: #fff;
+$cream: #F1D5B9;
 
 $thin-cream-border: 2px solid $cream;
 $medium-cream-border: 3px solid $cream;
