--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -13,7 +13,7 @@
   border: $thin-cream-border;
   box-shadow: 1px 1px 1px #111111;
   color: $white;
-  font-size: 18px;
+  font-size: $medium-font;
   font-weight: bold;
   font-family: $accent-font-family;
   text-shadow: 0px 1px 1px #111111;
