--- a/app/scss/helpers/_variables.scss
+++ b/app/scss/helpers/_variables.scss
@@ -11,3 +11,6 @@ $cream: #F1D5B9;
 
 $thin-cream-border: 2px solid $cream;
 $medium-cream-border: 3px solid $cream;
+
+$text-shadow: 2px 2px 7px #111111;
+$box-shadow: 2px 2px 2px #111111;
