--- a/app/scss/pages/_galleries.scss
+++ b/app/scss/pages/_galleries.scss
@@ -23,5 +23,5 @@
   max-height: 75%;
   margin: 0px auto;
   border: $thin-cream-border;
-  box-shadow: 2px 2px 2px #111111;
+  box-shadow: $box-shadow;
 }
