--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,46 @@
+.header__nav-link {
+  text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
+  font-size: 150%;
+  font-weight: bold;
+  color: #ffffff;
+  text-shadow: 2px 2px 7px #111111;
+  padding: 0px 25px; }
+
+.header__nav-link--cur {
+  text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
+  font-size: 150%;
+  font-weight: bold;
+  color: #F1D5B9;
+  text-shadow: 2px 2px 7px #111111;
+  padding: 0px 25px; }
+
+.header__logo {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  max-width: 35%;
+  height: auto; }
+  .header__logo img {
+    width: 100%; }
+
+.header {
+  width: 100%;
+  height: 600px;
+  background-image: url("../images/backgrounds/call_to_action.jpg");
+  background-size: cover;
+  border-bottom: 3px solid #F1D5B9; }
+
+.header__nav {
+  position: absolute;
+  top: 10%;
+  right: 5%;
+  max-width: 50%;
+  height: auto; }
+  .header__nav li {
+    display: inline; }
+
 /* Import the 960 grid system to help define layout */
 /*
   960 Grid System ~ Core CSS.
@@ -487,33 +530,6 @@ a {
 a:hover {
   cursor: pointer; }
 
-header {
-  width: 100%;
-  height: 600px;
-  background-image: url("../images/backgrounds/call_to_action.jpg");
-  background-size: cover;
-  border-bottom: 3px solid #F1D5B9; }
-
-nav {
-  position: absolute;
-  top: 10%;
-  right: 5%;
-  max-width: 50%;
-  height: auto; }
-
-nav li {
-  display: inline; }
-
-#websiteLogo {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  max-width: 35%;
-  height: auto; }
-
-#websiteLogo img {
-  width: 100%; }
-
 #callToAction {
   position: absolute;
   top: 50%;
@@ -556,24 +572,6 @@ nav li {
   font-size: 24px;
   font-family: 'kaushan_scriptregular', Arial, sans-serif;
   text-shadow: 2px 2px 7px #111111; }
-
-.navbtn {
-  text-decoration: none;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 150%;
-  font-weight: bold;
-  color: #ffffff;
-  text-shadow: 2px 2px 7px #111111;
-  padding: 0px 25px; }
-
-.navbtncur {
-  text-decoration: none;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 150%;
-  font-weight: bold;
-  color: #F1D5B9;
-  text-shadow: 2px 2px 7px #111111;
-  padding: 0px 25px; }
 
 /*Homepage Styles */
 #siteSummary {
