--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,326 +1,96 @@
-.header__nav-link {
-  text-decoration: none;
+.navigation {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FA5724;
+  padding: 0 1rem;
+  border-bottom: 3px solid #FED05E; }
+  @media (min-width: 900px) {
+    .navigation {
+      flex-direction: row;
+      align-items: stretch; } }
+
+.navigation__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none; }
+  @media (min-width: 900px) {
+    .navigation__list {
+      justify-content: flex-end; } }
+  @media (min-width: 600px) {
+    .navigation__list {
+      flex-direction: row; } }
+
+.navigation__link {
+  display: block;
+  padding: 1rem;
   font-family: Arial, Verdana, sans-serif;
-  font-size: 150%;
+  font-size: 1.5rem;
   font-weight: bold;
-  color: #ffffff;
-  text-shadow: 2px 2px 7px #111111;
-  padding: 0px 25px; }
+  color: white;
+  text-shadow: 2px 2px 7px black;
+  text-decoration: none; }
+  .navigation__link:hover {
+    text-shadow: none; }
 
-.header__nav-link--cur {
-  text-decoration: none;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 150%;
-  font-weight: bold;
-  color: #F1D5B9;
-  text-shadow: 2px 2px 7px #111111;
-  padding: 0px 25px; }
+.navigation__link--cur {
+  color: #FED05E; }
 
-.header__logo {
-  position: absolute;
-  top: 5%;
-  left: 5%;
-  max-width: 35%;
-  height: auto; }
-  .header__logo img {
-    width: 100%; }
+.logo {
+  width: auto;
+  height: 100px;
+  padding: 1rem 0; }
 
-.header {
-  width: 100%;
-  height: 600px;
-  background-image: url("../images/backgrounds/call_to_action.jpg");
-  background-size: cover;
-  border-bottom: 3px solid #F1D5B9; }
-
-.header__nav {
-  position: absolute;
-  top: 10%;
-  right: 5%;
-  max-width: 50%;
-  height: auto; }
-  .header__nav li {
-    display: inline; }
-
-/* Import the 960 grid system to help define layout */
-/*
-  960 Grid System ~ Core CSS.
-  Learn more ~ http://960.gs/
-
-  Licensed under GPL and MIT.
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
 */
-/*
-  Forces backgrounds to span full width,
-  even if there is horizontal scrolling.
-  Increase this if your layout is wider.
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
-  Note: IE6 works fine without this fix.
-*/
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 body {
-  min-width: 960px; }
+  line-height: 1; }
 
-/* `Container
-----------------------------------------------------------------------------------------------------*/
-.container_12 {
-  margin-left: auto;
-  margin-right: auto;
-  width: 960px; }
+ol, ul {
+  list-style: none; }
 
-/* `Grid >> Global
-----------------------------------------------------------------------------------------------------*/
-.grid_1,
-.grid_2,
-.grid_3,
-.grid_4,
-.grid_5,
-.grid_6,
-.grid_7,
-.grid_8,
-.grid_9,
-.grid_10,
-.grid_11,
-.grid_12 {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px; }
+blockquote, q {
+  quotes: none; }
 
-.push_1, .pull_1,
-.push_2, .pull_2,
-.push_3, .pull_3,
-.push_4, .pull_4,
-.push_5, .pull_5,
-.push_6, .pull_6,
-.push_7, .pull_7,
-.push_8, .pull_8,
-.push_9, .pull_9,
-.push_10, .pull_10,
-.push_11, .pull_11 {
-  position: relative; }
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
 
-/* `Grid >> Children (Alpha ~ First, Omega ~ Last)
-----------------------------------------------------------------------------------------------------*/
-.alpha {
-  margin-left: 0; }
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
 
-.omega {
-  margin-right: 0; }
-
-/* `Grid >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .grid_1 {
-  width: 60px; }
-
-.container_12 .grid_2 {
-  width: 140px; }
-
-.container_12 .grid_3 {
-  width: 220px; }
-
-.container_12 .grid_4 {
-  width: 300px; }
-
-.container_12 .grid_5 {
-  width: 380px; }
-
-.container_12 .grid_6 {
-  width: 460px; }
-
-.container_12 .grid_7 {
-  width: 540px; }
-
-.container_12 .grid_8 {
-  width: 620px; }
-
-.container_12 .grid_9 {
-  width: 700px; }
-
-.container_12 .grid_10 {
-  width: 780px; }
-
-.container_12 .grid_11 {
-  width: 860px; }
-
-.container_12 .grid_12 {
-  width: 940px; }
-
-/* `Prefix Extra Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .prefix_1 {
-  padding-left: 80px; }
-
-.container_12 .prefix_2 {
-  padding-left: 160px; }
-
-.container_12 .prefix_3 {
-  padding-left: 240px; }
-
-.container_12 .prefix_4 {
-  padding-left: 320px; }
-
-.container_12 .prefix_5 {
-  padding-left: 400px; }
-
-.container_12 .prefix_6 {
-  padding-left: 480px; }
-
-.container_12 .prefix_7 {
-  padding-left: 560px; }
-
-.container_12 .prefix_8 {
-  padding-left: 640px; }
-
-.container_12 .prefix_9 {
-  padding-left: 720px; }
-
-.container_12 .prefix_10 {
-  padding-left: 800px; }
-
-.container_12 .prefix_11 {
-  padding-left: 880px; }
-
-/* `Suffix Extra Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .suffix_1 {
-  padding-right: 80px; }
-
-.container_12 .suffix_2 {
-  padding-right: 160px; }
-
-.container_12 .suffix_3 {
-  padding-right: 240px; }
-
-.container_12 .suffix_4 {
-  padding-right: 320px; }
-
-.container_12 .suffix_5 {
-  padding-right: 400px; }
-
-.container_12 .suffix_6 {
-  padding-right: 480px; }
-
-.container_12 .suffix_7 {
-  padding-right: 560px; }
-
-.container_12 .suffix_8 {
-  padding-right: 640px; }
-
-.container_12 .suffix_9 {
-  padding-right: 720px; }
-
-.container_12 .suffix_10 {
-  padding-right: 800px; }
-
-.container_12 .suffix_11 {
-  padding-right: 880px; }
-
-/* `Push Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .push_1 {
-  left: 80px; }
-
-.container_12 .push_2 {
-  left: 160px; }
-
-.container_12 .push_3 {
-  left: 240px; }
-
-.container_12 .push_4 {
-  left: 320px; }
-
-.container_12 .push_5 {
-  left: 400px; }
-
-.container_12 .push_6 {
-  left: 480px; }
-
-.container_12 .push_7 {
-  left: 560px; }
-
-.container_12 .push_8 {
-  left: 640px; }
-
-.container_12 .push_9 {
-  left: 720px; }
-
-.container_12 .push_10 {
-  left: 800px; }
-
-.container_12 .push_11 {
-  left: 880px; }
-
-/* `Pull Space >> 12 Columns
-----------------------------------------------------------------------------------------------------*/
-.container_12 .pull_1 {
-  left: -80px; }
-
-.container_12 .pull_2 {
-  left: -160px; }
-
-.container_12 .pull_3 {
-  left: -240px; }
-
-.container_12 .pull_4 {
-  left: -320px; }
-
-.container_12 .pull_5 {
-  left: -400px; }
-
-.container_12 .pull_6 {
-  left: -480px; }
-
-.container_12 .pull_7 {
-  left: -560px; }
-
-.container_12 .pull_8 {
-  left: -640px; }
-
-.container_12 .pull_9 {
-  left: -720px; }
-
-.container_12 .pull_10 {
-  left: -800px; }
-
-.container_12 .pull_11 {
-  left: -880px; }
-
-/* `Clear Floated Elements
-----------------------------------------------------------------------------------------------------*/
-/* http://sonspring.com/journal/clearing-floats */
-.clear {
-  clear: both;
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0;
-  height: 0; }
-
-/* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
-.clearfix:before,
-.clearfix:after,
-.container_12:before,
-.container_12:after {
-  content: '.';
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-  font-size: 0;
-  line-height: 0;
-  width: 0;
-  height: 0; }
-
-.clearfix:after,
-.container_12:after {
-  clear: both; }
-
-/*
-  The following zoom:1 rule is specifically for IE6 + IE7.
-  Move to separate stylesheet if invalid CSS is a problem.
-*/
-.clearfix,
-.container_12 {
-  zoom: 1; }
-
-/* Import fonts used for website */
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on June 18, 2015 */
 @font-face {
   font-family: 'kaushan_scriptregular';
@@ -328,7 +98,6 @@ body {
   font-weight: normal;
   font-style: normal; }
 
-/* Import lightbox styling for gallery */
 /* Preload images */
 body:after {
   content: url(../images/close.png) url(../images/loading.gif) url(../images/prev.png) url(../images/next.png);
@@ -516,11 +285,10 @@ body:after {
 
 /*General Styles*/
 body {
-  background-image: url("../images/backgrounds/page_background.jpg");
   margin: 0px; }
 
 p {
-  color: #ffffff;
+  color: black;
   font-size: 16px;
   font-family: Arial, Verdana, sans-serif; }
 
