--- a/app/scss/components/images.scss
+++ b/app/scss/components/images.scss
@@ -1,12 +1,6 @@
-.header__logo {
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    max-width: 35%;
-    height: auto;
-  
-    img {
-        width: 100%;
-    }
+.logo {
+    width: auto;
+    height: 100px;
+    padding: 1rem 0;
 }
  
