--- a/app/scss/components/navigation.scss
+++ b/app/scss/components/navigation.scss
@@ -1,19 +1,50 @@
-.header__nav-link {
-    text-decoration: none;
-    font-family: Arial, Verdana, sans-serif;
-    font-size: 150%;
-    font-weight: bold;
-    color: #ffffff;
-    text-shadow: 2px 2px 7px #111111;
-    padding: 0px 25px;
+.navigation {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: $dark-orange;
+    padding: 0 1rem;
+    border-bottom: 3px solid $yellow;
+
+    @media (min-width: 900px) {
+        flex-direction: row;
+        align-items: stretch;
+    }
 }
 
-.header__nav-link--cur {
-    text-decoration: none;
-    font-family: Arial, Verdana, sans-serif;
-    font-size: 150%;
-    font-weight: bold;
-    color: #F1D5B9;
-    text-shadow: 2px 2px 7px #111111;
-    padding: 0px 25px;
+.navigation__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+
+    @media (min-width: 900px) {
+        justify-content: flex-end;
+    }
+
+    @media (min-width: 600px){
+        flex-direction: row;
+    }
 }
+
+.navigation__link {
+    display: block;
+    padding: 1rem;
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 7px black;
+    text-decoration: none;
+
+    &:hover {
+        text-shadow: none;
+    }
+}
+
+.navigation__link--cur {
+    color: $yellow;
+}
+
