--- a/app/scss/components/navigation.scss
+++ b/app/scss/components/navigation.scss
@@ -4,6 +4,8 @@
     justify-content: space-between;
     align-items: center;
     background-color: $dark-orange;
+    min-height: 20vh;
+    box-sizing: border-box;
     padding: 0 1rem;
     border-bottom: 3px solid $yellow;
 
