stripped out elements of old site

--- a/app/scss/components/navigation.scss
+++ b/app/scss/components/navigation.scss
@@ -42,11 +42,15 @@
     text-decoration: none;
 
     &:hover {
+        color: $yellow;
+    }
+
+    &:active {
         text-shadow: none;
     }
 }
 
 .navigation__link--cur {
-    color: $yellow;
+    
 }
 
