--- a/app/scss/utility/variables.scss
+++ b/app/scss/utility/variables.scss
@@ -1,4 +1,12 @@
-$dark-orange: #FA5724;
-$light-orange: #FD8329;
-$yellow: #FED05E;
-$cream: #FEFCB8;
+$black: #000000;
+$dark-grey: #404040;
+$grey: #808080;
+$light-grey: #bfbfbf;
+$white: #ffffff;
+$work-purple: purple;
+$ride-green: green;
+$eat-yellow: yellow;
+$play-red: red;
+$contact-blue: blue;
+
+$base-font: Arial, Verdana, sans-serif; ;
