--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,108 +1,3 @@
-.navigation {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #FA5724;
-  min-height: 20vh;
-  box-sizing: border-box;
-  padding: 0 1rem;
-  border-bottom: 3px solid #FED05E; }
-  @media (min-width: 900px) {
-    .navigation {
-      flex-direction: row;
-      align-items: stretch; } }
-
-.navigation__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  list-style-type: none; }
-  @media (min-width: 900px) {
-    .navigation__list {
-      justify-content: flex-end; } }
-  @media (min-width: 600px) {
-    .navigation__list {
-      flex-direction: row; } }
-
-.navigation__link {
-  display: block;
-  padding: 1rem;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: white;
-  text-shadow: 2px 2px 7px black;
-  text-decoration: none; }
-  .navigation__link:hover {
-    color: #FED05E; }
-  .navigation__link:active {
-    text-shadow: none; }
-
-.logo {
-  width: auto;
-  height: 100px;
-  padding: 1rem 0; }
-
-.call-to-action {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: url("../images/backgrounds/default.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
-  min-height: 80vh;
-  box-sizing: border-box;
-  padding: 1rem 2rem;
-  border-bottom: 3px solid #FED05E; }
-
-.call-to-action__header {
-  color: #FED05E;
-  font-size: 3rem;
-  font-family: Arial, Verdana, sans-serif;
-  letter-spacing: 0.2rem;
-  text-align: center;
-  text-shadow: 2px 2px black;
-  padding-bottom: 1rem; }
-
-.call-to-action__sub-header {
-  color: #FA5724;
-  font-size: 1.6rem;
-  font-family: Arial, Verdana, sans-serif;
-  text-align: center;
-  text-shadow: 2px 2px black;
-  padding-bottom: 3rem; }
-
-.call-to-action__buttons {
-  display: flex;
-  flex-direction: column; }
-  .call-to-action__buttons > * {
-    margin: 0 1rem 1rem 1rem; }
-  @media (min-width: 600px) {
-    .call-to-action__buttons {
-      flex-direction: row; } }
-
-.link-button {
-  color: #FA5724;
-  text-decoration: none;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 1.2rem;
-  text-align: center;
-  text-shadow: 2px 2px black;
-  padding: 0.5rem;
-  border: 3px solid #FA5724;
-  border-radius: 6px;
-  box-shadow: 2px 2px black; }
-  .link-button:hover {
-    text-shadow: none;
-    background-color: #FED05E; }
-  .link-button:active {
-    box-shadow: none; }
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -149,3 +44,113 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+p, a, li, h1, h2, h3, h4, h5 {
+  color: #ffffff;
+  font-family: Arial, Verdana, sans-serif; }
+
+body {
+  background-color: #000000; }
+
+.link-button {
+  text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  padding: 0.5rem;
+  border: 3px solid #ffffff;
+  box-shadow: 2px 2px black; }
+  .link-button:hover {
+    color: #bfbfbf;
+    border: 3px solid #bfbfbf; }
+  .link-button:active {
+    text-shadow: none;
+    box-shadow: none; }
+
+.header {
+  background: linear-gradient(170deg, #000000 25%, transparent), url("https://picsum.photos/g/900/600?random");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh; }
+
+.header__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 20vh;
+  box-sizing: border-box;
+  padding: 0 1rem; }
+  @media (min-width: 900px) {
+    .header__nav {
+      flex-direction: row;
+      align-items: stretch; } }
+
+.header__nav-logo {
+  display: block;
+  font-size: 3rem;
+  text-decoration: none;
+  padding: 1rem;
+  border: 5px solid #ffffff;
+  margin: auto 0; }
+
+.header__nav-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none; }
+  @media (min-width: 900px) {
+    .header__nav-list {
+      justify-content: flex-end; } }
+  @media (min-width: 600px) {
+    .header__nav-list {
+      flex-direction: row; } }
+
+.header__nav-link {
+  display: block;
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none; }
+  .header__nav-link:hover {
+    color: #bfbfbf; }
+  .header__nav-link:active {
+    transform: translateY(2px); }
+
+.header__nav-link--cur {
+  color: #808080; }
+
+.header__action {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  box-sizing: border-box;
+  padding: 1rem 2rem; }
+
+.header__action-heading {
+  font-size: 3rem;
+  letter-spacing: 0.2rem;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  padding-bottom: 1rem; }
+
+.header__action-sub-heading {
+  color: #bfbfbf;
+  font-size: 1.6rem;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  padding-bottom: 3rem; }
+
+.header__action-buttons {
+  display: flex;
+  flex-direction: column; }
+  .header__action-buttons > * {
+    margin: 0 1rem 1rem 1rem; }
+  @media (min-width: 600px) {
+    .header__action-buttons {
+      flex-direction: row; } }
