--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -1,21 +1,20 @@
 .link-button {
-    color: $dark-orange;
     text-decoration: none;
     font-family: Arial, Verdana, sans-serif;
     font-size: 1.2rem;
     text-align: center;
     text-shadow: 2px 2px black;
     padding: 0.5rem;
-    border: 3px solid $dark-orange;
-    border-radius: 6px;
+    border: 3px solid $white;
     box-shadow: 2px 2px black;
 
     &:hover {
-        text-shadow: none;
-        background-color: $yellow;
+        color: $light-grey;
+        border: 3px solid $light-grey;
     }
 
     &:active {
+        text-shadow: none;
         box-shadow: none;
     }
   }
