--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -43,17 +43,17 @@
     }
 }
 
-// WIP
 .header__nav-list--expanded {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: space-around;
+    align-items: center;
     position: fixed;
     top: 0;
     right: 0;
-    background-color: black;
-    border-left: 2px solid $white;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.8); 
 }
 
 .header__nav-link {
