--- a/app/css/main.css
+++ b/app/css/main.css
@@ -69,7 +69,7 @@ body {
     box-shadow: none; }
 
 .header {
-  background: linear-gradient(170deg, #000000 25%, transparent), url("https://picsum.photos/g/900/600?random");
+  background: linear-gradient(170deg, #000000 25%, transparent 65%), url(../images/backgrounds/default.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -116,7 +116,7 @@ body {
   right: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.8); }
+  background-color: #000000; }
 
 .header__nav-link {
   padding: 1rem;
@@ -140,6 +140,16 @@ body {
   @media (min-width: 500px) {
     .header__nav-link--mobile {
       margin-top: 0; } }
+
+.header__nav-link--mobile-expanded {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  margin: 1rem; }
+  @media (min-width: 500px) {
+    .header__nav-link--mobile-expanded {
+      margin: 3rem; } }
 
 .header__action {
   display: flex;
