--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -1,6 +1,6 @@
 .header {
-    background: linear-gradient(170deg, $black 25%, transparent), 
-                url('https://picsum.photos/g/900/600?random');
+    background: linear-gradient(170deg, $black 25%, transparent 65%), 
+                url(../images/backgrounds/default.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -53,7 +53,7 @@
     right: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.8); 
+    background-color: $black;
 }
 
 .header__nav-link {
@@ -85,6 +85,18 @@
 
     @media (min-width: 500px) {
         margin-top: 0;
+    }
+}
+
+.header__nav-link--mobile-expanded {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    margin: 1rem;
+
+    @media (min-width: 500px) {
+        margin: 3rem;
     }
 }
 
