--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'vendor/reset';
 @import 'utility/variables';
 @import 'utility/global';
+@import 'base/typography';
 @import 'components/buttons';
 @import 'components/header';
 @import 'components/blog_posts';
