--- a/app/scss/utility/variables.scss
+++ b/app/scss/utility/variables.scss
@@ -3,10 +3,10 @@ $dark-grey: #404040;
 $grey: #808080;
 $light-grey: #bfbfbf;
 $white: #ffffff;
-$work-purple: purple;
-$ride-green: green;
-$eat-yellow: yellow;
-$play-red: red;
-$contact-blue: blue;
+$work-purple: #670067;
+$ride-green: #006700;
+$eat-yellow: #E6E600;
+$play-red: #E60000;
+$contact-blue: #0000E6;
 
 $base-font: Arial, Verdana, sans-serif; ;
