--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,9 @@
 @import 'utility/variables';
 @import 'utility/global';
 @import 'base/typography';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'components/articles';
 @import 'components/buttons';
-@import 'components/header';
 @import 'components/blog_posts';
