--- a/app/css/main.css
+++ b/app/css/main.css
@@ -67,41 +67,58 @@ body {
 .text-colour--contact {
   color: #0000E6; }
 
-.link-button {
-  text-decoration: none;
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 1.2rem;
-  text-align: center;
-  text-shadow: 2px 2px black;
-  padding: 0.5rem;
-  border: 3px solid #ffffff;
-  box-shadow: 2px 2px black; }
-  .link-button:hover {
-    color: #bfbfbf;
-    border: 3px solid #bfbfbf; }
-  .link-button:active {
-    text-shadow: none;
-    box-shadow: none; }
+.grid {
+  display: grid;
+  grid-template-rows: 100vh auto 10vh;
+  grid-template-areas: "header" "content" "footer"; }
+
+.grid__header {
+  grid-area: header; }
+
+.grid__content {
+  grid-area: content;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(auto-fill, auto); }
+
+.grid__content__item {
+  grid-column: 1 / 3; }
+
+.grid__content__item--left-half {
+  grid-column: 1 / 3; }
+  @media (min-width: 900px) {
+    .grid__content__item--left-half {
+      grid-column: 1 / 2; } }
+
+.grid__content__item--right-half {
+  grid-column: 1 / 3; }
+  @media (min-width: 900px) {
+    .grid__content__item--right-half {
+      grid-column: 2 / 3; } }
+
+.grid__footer {
+  grid-area: footer; }
 
 .header {
   background: linear-gradient(170deg, #000000 25%, transparent 65%), url(../images/backgrounds/default.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh; }
+  height: 100%; }
 
 .header__nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 15vh;
+  height: 45%;
   box-sizing: border-box;
   padding: 2rem 1rem; }
   @media (min-width: 500px) {
     .header__nav {
       flex-direction: row;
-      justify-content: space-between; } }
+      justify-content: space-between;
+      height: 20%; } }
 
 .header__nav-logo {
   display: block;
@@ -168,9 +185,12 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 85vh;
+  height: 55%;
   box-sizing: border-box;
   padding: 1rem 2rem; }
+  @media (min-width: 500px) {
+    .header__action {
+      height: 80%; } }
 
 .header__action-heading {
   font-size: 3rem;
@@ -194,6 +214,33 @@ body {
   @media (min-width: 500px) {
     .header__action-buttons {
       flex-direction: row; } }
+
+.footer {
+  border-top: 2px solid #ffffff;
+  padding: 1rem; }
+
+.section-intro {
+  border-top: 2px solid #ffffff;
+  padding: 3rem; }
+
+.section-intro__text {
+  font-size: 1.6rem; }
+
+.link-button {
+  text-decoration: none;
+  font-family: Arial, Verdana, sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
+  text-shadow: 2px 2px black;
+  padding: 0.5rem;
+  border: 3px solid #ffffff;
+  box-shadow: 2px 2px black; }
+  .link-button:hover {
+    color: #bfbfbf;
+    border: 3px solid #bfbfbf; }
+  .link-button:active {
+    text-shadow: none;
+    box-shadow: none; }
 
 .blog-posts {
   margin: 2rem; }
