--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,4 +7,4 @@
 @import 'layout/footer';
 @import 'components/articles';
 @import 'components/buttons';
-@import 'components/blog_posts';
+@import 'components/blog';
