--- a/app/css/main.css
+++ b/app/css/main.css
@@ -106,6 +106,12 @@ body {
   background-size: cover;
   height: 100%; }
 
+.header--ride {
+  background: linear-gradient(170deg, #000000 25%, transparent 65%), url(../images/backgrounds/ride.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 .header__nav {
   display: flex;
   flex-direction: column;
@@ -216,14 +222,15 @@ body {
       flex-direction: row; } }
 
 .footer {
-  border-top: 2px solid #ffffff;
+  background-color: grey;
   padding: 1rem; }
 
-.section-intro {
+.article {
   border-top: 2px solid #ffffff;
+  border-bottom: 2px solid #ffffff;
   padding: 3rem; }
 
-.section-intro__text {
+.article__text {
   font-size: 1.6rem; }
 
 .link-button {
@@ -242,25 +249,15 @@ body {
     text-shadow: none;
     box-shadow: none; }
 
-.blog-posts {
-  margin: 2rem; }
-
-.blog-posts__heading {
-  margin-bottom: 2rem;
-  font-size: 2.6rem;
-  font-family: Arial, Verdana, sans-serif;
-  color: #bfbfbf; }
-
 .blog-post {
-  margin-bottom: 2rem;
-  border: 3px solid #ffffff;
-  padding: 2rem; }
-
-.blog-post__link {
-  text-decoration: none; }
+  border-bottom: 2px solid #ffffff;
+  padding: 3rem; }
 
 .blog-post__heading {
   margin-bottom: 1rem;
   font-size: 1.6rem;
   font-family: Arial, Verdana, sans-serif;
   color: #bfbfbf; }
+
+.blog-post > p {
+  padding-bottom: 1rem; }
