--- a/app/scss/components/articles.scss
+++ b/app/scss/components/articles.scss
@@ -1,8 +1,16 @@
-.article {
+.intro {
     border-top: 2px solid $white;
     padding: 3rem;
 }
 
-.article__text {
+.intro__text {
     font-size: 1.6rem;
+}
+
+.article {
+    
+}
+
+.article__text {
+
 }
